# LabelHub

./: .dockerignore  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/agent/: README.md  package.json  pyproject.toml
apps/agent/src/: main.js
apps/agent/src/labelhub_agent/: __main__.py  api_client.py  config.py  contracts.py  llm.py  main.py  prompt.py  worker.py
apps/agent/tests/: test_contracts.py
apps/agent/tests/integration/: test_worker_flow.py
apps/agent/tests/unit/: test_contracts.py
apps/api/: README.md  SDD.md  package.json  pyproject.toml
apps/api/migrations/: README.md  env.py
apps/api/migrations/versions/: 0001_create_users.py  0002_create_stage1_foundation.py  0003_create_template_foundation.py  0004_create_labeler_foundation.py  0005_create_review_foundation.py  0006_create_export_foundation.py
apps/api/src/: main.js
apps/api/src/labelhub_api/: __main__.py  main.py
apps/api/src/labelhub_api/api/: deps.py
apps/api/src/labelhub_api/core/: config.py  enums.py  errors.py  middleware.py  security.py
apps/api/src/labelhub_api/db/: session.py
apps/api/src/labelhub_api/models/: __init__.py  assignment.py  audit.py  dataset.py  export.py  file.py  review.py  review_config.py  task.py  template.py  user.py
apps/api/src/labelhub_api/schemas/: assignments.py  audit.py  auth.py  common.py  datasets.py  exports.py  files.py  health.py  review_configs.py  reviews.py  tasks.py  templates.py
apps/api/src/labelhub_api/services/: assignment_service.py  auth_service.py  dataset_service.py  export_service.py  file_service.py  llm_client.py  review_config_service.py  review_service.py  submission_validation.py  task_service.py  template_service.py
apps/api/tests/: test_dataset_import.py  test_llm_client.py  test_stage1_contract.py  test_stage2_contract.py  test_stage3_assignments.py  test_stage4_review_flow.py  test_stage5_exports.py  test_task_management.py  test_template_schema.py
apps/api/tests/integration/: test_dataset_import.py  test_review_config.py  test_stage3_assignments.py  test_stage4_review_flow.py  test_stage5_exports.py  test_template_schema.py
apps/api/tests/unit/: test_auth_contract.py  test_stage1_contract.py  test_stage2_contract.py
deploy/: compose.yaml
(+165 files in other folders)
