[project]
name = "labelhub-agent"
version = "0.1.0"
description = "LabelHub Python AI review agent."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0",
  "pydantic-settings>=2.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "unit: isolated contract, config, prompt, and parser tests",
  "integration: worker orchestration tests with fake API and LLM clients"
]

[tool.hatch.build.targets.wheel]
packages = ["src/labelhub_agent"]
