[project]
name = "labelhub-api"
version = "0.1.0"
description = "LabelHub Python backend API service."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "pymysql>=1.1.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/labelhub_api"]
